data/raw_logs/lexical/lex_2.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/lexical/lex_2.c: In function 'main':
/Users/krishtayade/CD_Lab_Project/data/code_snippets/lexical/lex_2.c:1:28: error: expected ':' before ';' token
    1 | int main() { int y = 10 ? 5; }
      |                            ^
      |                            :
